--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   ],
   "name": "@ofs-users/plugin",
   "type": "module",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Oracle Field Service plugin base code",
   "main": "dist/ofs-plugin.es.js",
   "module": "dist/ofs-plugin.es.js",
@@ -40,6 +40,6 @@
   },
   "license": "UPL-1.0",
   "dependencies": {
-    "@ofs-users/proxy": "https://github.com/oracle-samples/ofs-proxy-js.git"
+    "@ofs-users/proxy": "^1.7.1"
   }
 }
